# vonage-client-rs

./: .gitignore  Cargo.toml  README.md
examples/: ncco_server.rs
src/: lib.rs
src/api/: mod.rs
src/api/conversation/: mod.rs  user.rs
src/api/voice/: create_call.rs  mod.rs
src/api/voice/ncco/: action.rs  mod.rs  tests.rs
src/api/voice/ncco/actions/: conversation.rs  mod.rs  talk.rs
src/api/voice/ncco/actions/connect/: app.rs  mod.rs  phone.rs  sip.rs  vbc.rs  websocket.rs
src/api/voice/webhooks/: call_answer.rs  call_event.rs  mod.rs
src/client/: builder.rs  client_types.rs  mod.rs
src/client/jwt/: acl.rs  jti.rs  mod.rs  time.rs
src/types/: pages.rs
